# derivit

./: Cargo.toml
crates/derivit-core/src/: getter.rs  lib.rs  setter.rs
crates/enumit/: Cargo.toml
crates/enumit/src/: lib.rs
crates/fromit/: Cargo.toml
crates/fromit/examples/: fromit.rs
crates/fromit/src/: field.rs  from.rs  getters.rs  into.rs  lib.rs  setters.rs  structure.rs
crates/viewit/examples/: foo.rs
crates/viewit/src/: lib.rs
