[package]
name = "fromit"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
description = "Derive macros for infoit, cannot be used standalone"

[lib]
proc-macro = true


[dependencies]
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
darling = { workspace = true }
heck = { workspace = true }
derivit-core = { workspace = true }
